--- a/src/app/test.html
+++ b/src/app/test.html
@@ -17,6 +17,8 @@
             <br>
             token1: {{ token1 }}
             <br>
+            userInfo: {{ userInfo }}
+            <br>
             <router-link to="/index">Home</router-link>
             <router-view></router-view> 
         </div>
