--- a/src/app/test.html
+++ b/src/app/test.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="vm">
-            这是第一个打包测试！！！
+            这是第一个打包测试！！！{{$t('permission.roles')}}
             <input type="text" v-model="name" value="" @blur="test" >
             <div class="div1" style="width: 100px;height: 20px"></div>
             <div class="div2"><span>123</span></div>
