--- a/src/app/login.html
+++ b/src/app/login.html
@@ -13,11 +13,11 @@
             <lang-select></lang-select>
         </div>
         <div class="login-content">
-            <el-form :model="loginFrom">
+            <el-form :model="loginFrom" autoComplete="on" :rules="loginRules" ref="loginForm">
                 <el-row :gutter="8">
                     <el-col :span="24">
-                        <el-form-item label="">
-                            <el-input v-model="loginFrom.userName" placeholder="请输入用户名">
+                        <el-form-item label="" prop="userName">
+                            <el-input v-model="loginFrom.userName" auto-complete="on" placeholder="请输入用户名">
                                 <i slot="prefix" class="el-input__icon el-icon-spa-people"></i>
                             </el-input>
                         </el-form-item>
@@ -25,16 +25,17 @@
                 </el-row>
                 <el-row :gutter="8">
                     <el-col :span="24">
-                        <el-form-item label="">
-                            <el-input type="password" v-model="loginFrom.password" placeholder="请输入密码">
+                        <el-form-item label="" prop="password">
+                            <el-input :type="passwordType" v-model="loginFrom.password" @keyup.enter.native="handleLogin" auto-complete="on" placeholder="请输入密码">
                                 <i slot="prefix" class="el-input__icon el-icon-spa-lock"></i>
+                                <i slot="suffix" style="cursor: pointer;" @click="showPwd" class="el-input__icon el-icon-spa-eye"></i>
                             </el-input>
                         </el-form-item>
                     </el-col>
                 </el-row>
                 <el-row :gutter="8">
                     <el-col :span="24">
-                        <el-button @click="toLogin" type="danger">登录</el-button>
+                        <el-button :loading="loading" @click.native.prevent="handleLogin" type="danger">登录</el-button>
                     </el-col>
                 </el-row>
             </el-form>
