--- a/src/app/test.html
+++ b/src/app/test.html
@@ -5,6 +5,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
         <div id="vm">
@@ -19,6 +20,7 @@
             token: {{ token }}
             <br>
             <router-link to="/index">Home</router-link>
+            <router-link to="/test1">Test1</router-link>
             <router-view></router-view> 
         </div>
     </body>
