--- a/src/app/simple.html
+++ b/src/app/simple.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-<body style="margin: 0;">
+<body>
     <div id="simple">
         <layout></layout>
     </div>
