--- a/src/app/simple.html
+++ b/src/app/simple.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="simple">
-        <layout></layout>
+        <router-view></router-view>
     </div>
 </body>
 </html>
